# Revisited

./: .travis.yml  CMakeLists.txt  README.md  codecov.yaml
.github/workflows/: install.yml  ubuntu.yml
benchmark/: CMakeLists.txt  benchmark.cpp
cmake/: CPM.cmake  CPMProject.CMakeLists.cmake.in  LarsVisitorConfig.cmake.in
dependencies/LHC/: CMakeLists.txt
dependencies/catch2/: CMakeLists.txt
dependencies/ctti/: CMakeLists.txt  cttiConfig.cmake.in
examples/: CMakeLists.txt  any.cpp  anyfunction.cpp  visitor.cpp  visitor_vs_dynamic_cast.cpp
include/lars/: any.h  any_function.h  component_visitor.h  inheritance_list.h  shared_visitor_cast.h  type_index.h  type_list.h  visitable_type_index.h  visitor.h  visitor_pointer_cast.h
include/lars/visitor/: inheritance_list.h
include/revisited/: any.h  any_function.h  inheritance_list.h  make_function.h  type_index.h  type_list.h  visitor.h  visitor_pointer_cast.h
test/: CMakeLists.txt
test/source/: any.cpp  any_function.cpp  inheritance_list.cpp  type_index.cpp  visitor.cpp
tests/: CMakeLists.txt  any.cpp  any_function.cpp  component_visitor.cpp  inheritance_list.cpp  main.cpp  type_index.cpp  visitor.cpp
tests/catch2/: CMakeLists.txt
